Dark mode and fix button

--- a/MainSystem/public/css/style.css
+++ b/MainSystem/public/css/style.css
@@ -39,7 +39,7 @@
 .font-footer {
     font-family: 'Hannari', sans-serif; 
     font-size: 2em; 
-    margin-left: 10px;
+    margin-left: 0px;
 }
 
 .font-footer2 {
@@ -422,6 +422,23 @@
     .feedback-img {
       width: 120px;
       height: 120px; }
+
+
+/* Dark mode */
+.dark-mode {
+  background-color: #222;
+  color: #fff;
+}
+
+.dark-mode .navbar-light {
+  background-color: #333 !important;
+}
+
+.dark-mode .navbar-light .navbar-nav .nav-link {
+  color: #fff !important;
+}
+
+
   
   
   
